# Skyrmion_SNN

./: .gitignore  README.md  function.py  makefile  requirements.txt  setup.py  snntest.py
src/: CMakeLists.txt  IEEE754.cpp  leaky.cpp  parent.cpp  sky.cpp  sky.h
src/include/: IEEE754.h  leaky.h  parent.h  sky.h
test/: makefile  ut_all.cpp  ut_leaky.cpp  ut_leaky.h  ut_sky.h  ut_sky_cppFile_v2.h
